--- a/Kaskeset.Server/Kaskeset.Server/Kaskeset.Server.csproj
+++ b/Kaskeset.Server/Kaskeset.Server/Kaskeset.Server.csproj
@@ -8,4 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kaskeset.Common\Kaskeset.Common.csproj" />
+  </ItemGroup>
 </Project>
