--- a/Kaskeset.Server/Kaskeset.Server/Kaskeset.Server.csproj
+++ b/Kaskeset.Server/Kaskeset.Server/Kaskeset.Server.csproj
@@ -10,6 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Kaskeset.Common\Kaskeset.Common.csproj" />
+    <Reference Include="Kaskeset.Common">
+      <HintPath>..\..\Kaskeset.Common\Kaskeset.Common\bin\Debug\netcoreapp3.1\Kaskeset.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
